Se agrego un poco de DOM

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <section class="box-img" data-aos="fade-down">
                 <img src="./assets/img/carrusel1.svg" alt="foto" width="100%">
             </section>
+            <p class="domm" id="domm"></p>
             <section class="box-content" id="catalogo">
                 <div class="box-grid">
                     <div class="content-item" data-aos="fade-up"
