--- a/index.html
+++ b/index.html
@@ -22,7 +22,22 @@
             </ul>
         </nav>
     </header>
-    <aside class="button-float"><i class="fa-solid fa-cart-shopping"></i></aside>
+    <aside>
+        <div class="button-float" id="allCarritoButton">
+            <i class="fa-solid fa-cart-shopping"></i>
+        </div>
+        <div class="carrito" id="allCarrito">
+            <button type="button" class="deleteA" id="deleteU">
+                <i class="fa-solid fa-trash-arrow-up"></i>
+            </button>
+            <p>Agrega Articulos!</p>
+            <div class="articulos">
+
+            </div>
+            <br>
+            <p id="total">ASAD</p>
+        </div>
+    </aside>
     <main>
         <section class="catalogo">
             <section class="box-img" data-aos="fade-down">
@@ -37,7 +52,7 @@
                         <div class="content-item__description">
                             <h3>New York Yankees - 59Fifty Cerrada</h3>
                             <p>35$</p>
-                            <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                            <button id="buttonAddNY"><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
                         </div>
                     </div>
                     <div class="content-item" data-aos="fade-up"
@@ -46,7 +61,7 @@
                         <div class="content-item__description">
                             <h3>Boston Sox SS - 59Fifty Cerrada</h3>
                             <p>37$</p>
-                            <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                            <button id="buttonAddB"><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
                         </div>
                     </div>
                     <div class="content-item" data-aos="fade-up"
@@ -55,7 +70,7 @@
                         <div class="content-item__description">
                             <h3>Chicago White Sox - 59Fifty Cerrada</h3>
                             <p>34$</p>
-                            <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                            <button id="buttonAddSX"><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
                         </div>
                     </div>
                     <div class="content-item" data-aos="fade-up"
@@ -198,8 +213,9 @@
                 2022</a></p>
             <p class=""><a href="#header">NewEre GA - inicio</a></p>
     </footer>
-    
-<script src="index.js"></script>
+
+<!-- scirpt -->
+<script src="script.js"></script>
 <!-- AOS JS -->
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
  <script>
