Se agrego el signo '$' al total

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
             </div>
             <br>
-            <p id="total">ASAD</p>
+            <p id="total">0$</p>
         </div>
     </aside>
     <main>
@@ -79,7 +79,7 @@
                         <div class="content-item__description">
                             <h3>New York Yankees - 59Fifty Cerrada</h3>
                             <p>35$</p>
-                            <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                            <button ><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
                         </div>
                     </div>
                     <div class="content-item" data-aos="fade-up"
@@ -88,7 +88,7 @@
                         <div class="content-item__description">
                             <h3>New York Yankees - 59Fifty Cerrada</h3>
                             <p>35$</p>
-                            <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                            <button ><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
                         </div>
                     </div>
                     <div class="content-item" data-aos="fade-up"
@@ -97,7 +97,7 @@
                         <div class="content-item__description">
                             <h3>New York Yankees - 59Fifty Cerrada</h3>
                             <p>35$</p>
-                            <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                            <button ><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
                         </div>
                     </div>
                     <div class="content-item" data-aos="fade-up"
@@ -106,7 +106,7 @@
                         <div class="content-item__description">
                             <h3>New York Yankees - 59Fifty Cerrada</h3>
                             <p>35$</p>
-                            <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                            <button ><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
                         </div>
                     </div>
                     <div class="content-item" data-aos="fade-up"
@@ -115,7 +115,7 @@
                         <div class="content-item__description">
                             <h3>New York Yankees - 59Fifty Cerrada</h3>
                             <p>35$</p>
-                            <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                            <button ><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
                         </div>
                     </div>
                     <div class="content-item" data-aos="fade-up"
@@ -124,7 +124,7 @@
                         <div class="content-item__description">
                             <h3>New York Yankees - 59Fifty Cerrada</h3>
                             <p>35$</p>
-                            <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                            <button ><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
                         </div>
                     </div>
                     <div class="content-item" data-aos="fade-up"
@@ -133,7 +133,7 @@
                         <div class="content-item__description">
                             <h3>New York Yankees - 59Fifty Cerrada</h3>
                             <p>35$</p>
-                            <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                            <button ><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
                         </div>
                     </div>
                     <div class="content-item" data-aos="fade-up"
@@ -142,7 +142,7 @@
                         <div class="content-item__description">
                             <h3>New York Yankees - 59Fifty Cerrada</h3>
                             <p>35$</p>
-                            <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                            <button ><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
                         </div>
                     </div>
                     <div class="content-item" data-aos="fade-up"
@@ -151,7 +151,7 @@
                         <div class="content-item__description">
                             <h3>New York Yankees - 59Fifty Cerrada</h3>
                             <p>35$</p>
-                            <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                            <button ><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
                         </div>
                     </div>
                 </div>
