Se creo un segundo Algoritmo(MAS RECOMENDADO)

--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
                 <i class="fa-solid fa-trash-arrow-up"></i>
             </button>
             <p>Agrega Articulos!</p>
-            <div class="articulos">
-
+            <div class="articulos" id="articulos">
             </div>
             <br>
             <p id="total">0$</p>
@@ -215,7 +214,7 @@
     </footer>
 
 <!-- scirpt -->
-<script src="script.js"></script>
+<script src="script2.js"></script>
 <!-- AOS JS -->
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
  <script>
