- Se mejoro el orden de los scripts

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- css -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <!-- Place your kit's code here -->
     <script src="https://kit.fontawesome.com/5229224c55.js" crossorigin="anonymous"></script>
     <!-- AOS animate -->
@@ -27,10 +27,7 @@
             <i class="fa-solid fa-cart-shopping"></i>
         </div>
         <div class="carrito" id="allCarrito">
-            <button type="button" class="deleteA" id="deleteU">
-                <i class="fa-solid fa-trash-arrow-up"></i>
-            </button>
-            <p>Agrega Articulos!</p>
+            <p class="asaide-titulo">Bolsa de articulos</p>
             <div class="articulos" id="articulos">
             </div>
             <br>
@@ -43,116 +40,8 @@
                 <img src="./assets/img/carrusel1.svg" alt="foto" width="100%">
             </section>
             <p class="domm" id="domm"></p>
-            <section class="box-content" id="catalogo">
-                <div class="box-grid">
-                    <div class="content-item" data-aos="fade-up"
-                    data-aos-anchor-placement="center-bottom">
-                        <div class="imagen"></div>
-                        <div class="content-item__description">
-                            <h3>New York Yankees - 59Fifty Cerrada</h3>
-                            <p>35$</p>
-                            <button id="buttonAddNY"><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
-                        </div>
-                    </div>
-                    <div class="content-item" data-aos="fade-up"
-                    data-aos-anchor-placement="center-bottom">
-                        <div class="imagen2"></div>
-                        <div class="content-item__description">
-                            <h3>Boston Sox SS - 59Fifty Cerrada</h3>
-                            <p>37$</p>
-                            <button id="buttonAddB"><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
-                        </div>
-                    </div>
-                    <div class="content-item" data-aos="fade-up"
-                    data-aos-anchor-placement="center-bottom">
-                        <div class="imagen3"></div>
-                        <div class="content-item__description">
-                            <h3>Chicago White Sox - 59Fifty Cerrada</h3>
-                            <p>34$</p>
-                            <button id="buttonAddSX"><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
-                        </div>
-                    </div>
-                    <div class="content-item" data-aos="fade-up"
-                    data-aos-anchor-placement="center-bottom">
-                        <div class="imagen"></div>
-                        <div class="content-item__description">
-                            <h3>New York Yankees - 59Fifty Cerrada</h3>
-                            <p>35$</p>
-                            <button ><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
-                        </div>
-                    </div>
-                    <div class="content-item" data-aos="fade-up"
-                    data-aos-anchor-placement="center-bottom">
-                        <div class="imagen"></div>
-                        <div class="content-item__description">
-                            <h3>New York Yankees - 59Fifty Cerrada</h3>
-                            <p>35$</p>
-                            <button ><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
-                        </div>
-                    </div>
-                    <div class="content-item" data-aos="fade-up"
-                    data-aos-anchor-placement="center-bottom">
-                        <div class="imagen"></div>
-                        <div class="content-item__description">
-                            <h3>New York Yankees - 59Fifty Cerrada</h3>
-                            <p>35$</p>
-                            <button ><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
-                        </div>
-                    </div>
-                    <div class="content-item" data-aos="fade-up"
-                    data-aos-anchor-placement="center-bottom">
-                        <div class="imagen"></div>
-                        <div class="content-item__description">
-                            <h3>New York Yankees - 59Fifty Cerrada</h3>
-                            <p>35$</p>
-                            <button ><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
-                        </div>
-                    </div>
-                    <div class="content-item" data-aos="fade-up"
-                    data-aos-anchor-placement="center-bottom">
-                        <div class="imagen"></div>
-                        <div class="content-item__description">
-                            <h3>New York Yankees - 59Fifty Cerrada</h3>
-                            <p>35$</p>
-                            <button ><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
-                        </div>
-                    </div>
-                    <div class="content-item" data-aos="fade-up"
-                    data-aos-anchor-placement="center-bottom">
-                        <div class="imagen"></div>
-                        <div class="content-item__description">
-                            <h3>New York Yankees - 59Fifty Cerrada</h3>
-                            <p>35$</p>
-                            <button ><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
-                        </div>
-                    </div>
-                    <div class="content-item" data-aos="fade-up"
-                    data-aos-anchor-placement="center-bottom">
-                        <div class="imagen"></div>
-                        <div class="content-item__description">
-                            <h3>New York Yankees - 59Fifty Cerrada</h3>
-                            <p>35$</p>
-                            <button ><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
-                        </div>
-                    </div>
-                    <div class="content-item" data-aos="fade-up"
-                    data-aos-anchor-placement="center-bottom">
-                        <div class="imagen"></div>
-                        <div class="content-item__description">
-                            <h3>New York Yankees - 59Fifty Cerrada</h3>
-                            <p>35$</p>
-                            <button ><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
-                        </div>
-                    </div>
-                    <div class="content-item" data-aos="fade-up"
-                    data-aos-anchor-placement="center-bottom">
-                        <div class="imagen"></div>
-                        <div class="content-item__description">
-                            <h3>New York Yankees - 59Fifty Cerrada</h3>
-                            <p>35$</p>
-                            <button ><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
-                        </div>
-                    </div>
+            <section class="box-content">
+                <div class="box-grid"  id="catalogo">
                 </div>
             </section>
         </section>
@@ -214,7 +103,9 @@
     </footer>
 
 <!-- scirpt -->
-<script src="script2.js"></script>
+<script src="./assets/js/articulosYhelpers.js"></script>
+<script src="./assets/js/asaide.js"></script>
+<script src="./assets/js/carro.js"></script>
 <!-- AOS JS -->
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
  <script>
