--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 <!-- toastify-js -->
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <!-- scirpt -->
-<script src="./assets/js/articulosYhelpers.js"></script>
+<script src="./assets/js/catalogo.js"></script>
 <script src="./assets/js/asaide.js"></script>
 <script src="./assets/js/carro.js"></script>
  <script>
